--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
         android:id="@+id/FC_intro"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:text="Welcome to my FlashCard App!"
+        android:text="Where do permanently deleted files go in computers?"
         android:textAlignment="center"
         android:textSize="40sp" />
 
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:visibility="invisible"
-        android:text="Have fun!"
+        android:text="Nowhere, it is still there."
         android:textAlignment="center"
         android:textSize="40sp" />
 
