--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/FC_Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -18,7 +19,7 @@
         android:textSize="30sp" />
 
     <TextView
-        android:id="@+id/FC_answerA"
+        android:id="@+id/FC_answer"
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/FC_question"
@@ -29,58 +30,19 @@
         android:text="Nowhere, it is still there."
         android:textColor="@color/colorPrimaryDark"
         android:textSize="30sp"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/FC_answerB"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/FC_answerA"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/Orange"
-        android:gravity="center"
-        android:text="Bin"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/FC_answerC"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/FC_answerB"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/Orange"
-        android:gravity="center"
-        android:text="Become viruses"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:visibility="visible" />
-
-    <TextView
-        android:id="@+id/FC_answerD"
-        android:layout_width="350dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/FC_answerC"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="15dp"
-        android:background="@color/Orange"
-        android:gravity="center"
-        android:text="Converted to something to save storage"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="30sp"
-        android:visibility="visible" />
+        android:visibility="invisible" />
 
     <ImageView
-        android:id="@+id/toggle_choices_visibility"
-        android:layout_width="59dp"
-        android:layout_height="44dp"
-        android:layout_alignBottom="@+id/FC_answerD"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-167dp"
-        android:src="@drawable/ic_closedeye" />
+        android:id="@+id/AddCard"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignEnd="@id/FC_answer"
+        android:layout_alignBottom="@id/FC_answer"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/ic_addcard" />
 
 
 
