updated version with app animations and styling

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/FC_Screen"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
+    android:background="@drawable/background_color"
+
+    android:padding="10dp"
     tools:context=".MainActivity">
 
     <TextView
@@ -12,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@drawable/solid_color_shape"
-        android:elevation="5dp"
+        android:elevation="10dp"
         android:gravity="center"
         android:text="Where do permanently deleted files go in computers?"
         android:textColor="@color/White"
@@ -25,35 +28,38 @@
         android:layout_below="@+id/FC_question"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="15dp"
-        android:background="@color/Orange"
+        android:background="@drawable/solid_color_shape2"
+        android:elevation="10dp"
         android:gravity="center"
         android:text="Nowhere, it is still there."
-        android:textColor="@color/colorPrimaryDark"
+        android:textColor="@color/White"
         android:textSize="30sp"
         android:visibility="invisible" />
 
     <ImageView
         android:id="@+id/AddCard"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:layout_alignEnd="@id/FC_answer"
         android:layout_alignBottom="@id/FC_answer"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="5dp"
-        android:src="@drawable/ic_addcard" />
+        android:src="@drawable/ic_addcard"
+        app:tint="@color/White" />
 
     <ImageView
         android:id="@+id/NextCard"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:layout_alignEnd="@id/FC_answer"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="283dp"
-        android:src="@drawable/ic_next" />
+        android:src="@drawable/ic_next"
+        app:tint="@color/White" />
 
 
 </RelativeLayout>
