--- a/app/src/main/res/drawable/solid_color_shape.xml
+++ b/app/src/main/res/drawable/solid_color_shape.xml
@@ -2,8 +2,8 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle" >
         <corners android:radius="50dp" />
-        <stroke android:width="4dp" android:color="#0F0522" />
-        <solid android:color="#CE5DED"/>
+        <stroke android:width="4dp" android:color="#A559C5" />
+        <solid android:color="#cc99cc"/>
         <padding android:left="20dp" android:top="20dp"
             android:right="20dp" android:bottom="10dp" />
     </shape>
