--- a/app/src/main/res/layout/activity_add_card.xml
+++ b/app/src/main/res/layout/activity_add_card.xml
@@ -5,18 +5,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
+    android:padding="10dp"
+    android:background="@drawable/background_color"
     tools:context=".AddCardActivity">
 
     <ImageView
         android:id="@+id/Cancel"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="5dp"
         android:visibility="visible"
+        app:tint="@color/White"
         android:src="@drawable/ic_cancel" />
 
     <EditText
@@ -38,13 +40,14 @@
 
     <ImageView
         android:id="@+id/Save"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="30dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="5dp"
         android:visibility="visible"
+        app:tint="@color/White"
         android:src="@drawable/ic_iconmonstr_save" />
 
 </RelativeLayout>
